--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "boom": "^7.3.0",
     "cheerio": "^1.0.0-rc.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
