--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3",
     "ngx-toastr": "^10.0.4",
+    "node-cron": "^2.0.3",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
