--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3",
+    "ngx-pagination": "^4.0.0",
     "ngx-toastr": "^10.0.4",
     "node-cron": "^2.0.3",
     "passport": "^0.4.0",
