--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "~7.2.0",
     "bcryptjs": "^2.4.3",
     "boom": "^7.3.0",
     "cheerio": "^1.0.0-rc.3",
