--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "server": "nodemon server/index.js"
+    "dev": "nodemon server/index.js",
+    "server": "forever --minUptime=1000 --spinSleepTime=1000 server/index.js"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "forever": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3",
